# gruvbox-factory

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
factory/: __main__.py  gruvbox-mix.txt  gruvbox-white.txt  gruvbox.txt
gruvbox-factory/: __init__.py  __main__.py  gruvbox.txt
